# routes/categoryRoutes.js
@@ -2,111 +2,94 @@ const express = require("express");
 const router = express.Router();
 const categoryController = require("../controllers/categoryController");
 
-/**
- * @swagger
- * tags:
- *   name: Categories
- *   description: Категории книг
- */
+router.post(
+    "/categories",
+    /* #swagger.tags = ['Categories']
+     #swagger.description = 'Создать категорию'
+     #swagger.parameters['body'] = {
+         in: 'body',
+         required: true,
+         schema: {
+             name: 'Фантастика'
+         }
+     }
+     #swagger.responses[201] = {
+         description: 'Категория создана'
+     }
+     #swagger.responses[409] = {
+         description: 'Категория уже существует'
+     }
+  */
+    categoryController.createCategory
+);
 
-/**
- * @swagger
- * /api/categories:
- *   post:
- *     summary: Создать категорию
- *     tags: [Categories]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               name:
- *                 type: string
- *     responses:
- *       201:
- *         description: Категория создана
- *       409:
- *         description: Категория уже существует
- */
-router.post("/api//categories", categoryController.createCategory);
+router.get(
+    "/categories",
+    /* #swagger.tags = ['Categories']
+     #swagger.description = 'Получить все категории'
+     #swagger.responses[200] = {
+         description: 'Список категорий'
+     }
+  */
+    categoryController.getAllCategories
+);
 
-/**
- * @swagger
- * /api/categories:
- *   get:
- *     summary: Получить все категории
- *     tags: [Categories]
- *     responses:
- *       200:
- *         description: Список категорий
- */
-router.get("/api//categories", categoryController.getAllCategories);
+router.get(
+    "/categories/:id",
+    /* #swagger.tags = ['Categories']
+     #swagger.description = 'Получить категорию по ID'
+     #swagger.parameters['id'] = {
+         in: 'path',
+         required: true,
+         type: 'integer'
+     }
+     #swagger.responses[200] = {
+         description: 'Категория найдена'
+     }
+     #swagger.responses[404] = {
+         description: 'Не найдено'
+     }
+  */
+    categoryController.getCategoryById
+);
 
-/**
- * @swagger
- * /api/categories/{id}:
- *   get:
- *     summary: Получить категорию по ID
- *     tags: [Categories]
- *     parameters:
- *       - in: path
- *         name: id
- *         schema:
- *           type: integer
- *         required: true
- *     responses:
- *       200:
- *         description: Категория найдена
- *       404:
- *         description: Не найдено
- */
-router.get("/api//categories/:id", categoryController.getCategoryById);
+router.put(
+    "/categories/:id",
+    /* #swagger.tags = ['Categories']
+     #swagger.description = 'Обновить категорию'
+     #swagger.parameters['id'] = {
+         in: 'path',
+         required: true,
+         type: 'integer'
+     }
+     #swagger.parameters['body'] = {
+         in: 'body',
+         required: true,
+         schema: {
+             name: 'Научная литература'
+         }
+     }
+     #swagger.responses[200] = {
+         description: 'Категория обновлена'
+     }
+  */
+    categoryController.updateCategory
+);
 
-/**
- * @swagger
- * /api/categories/{id}:
- *   put:
- *     summary: Обновить категорию
- *     tags: [Categories]
- *     parameters:
- *       - in: path
- *         name: id
- *         required: true
- *         schema:
- *           type: integer
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               name:
- *                 type: string
- *     responses:
- *       200:
- *         description: Категория обновлена
- */
-router.put("/api//categories/:id", categoryController.updateCategory);
-
-/**
- * @swagger
- * /api/categories/{id}:
- *   delete:
- *     summary: Удалить категорию
- *     tags: [Categories]
- *     parameters:
- *       - in: path
- *         name: id
- *         required: true
- *         schema:
- *           type: integer
- *     responses:
- *       204:
- *         description: Успешное удаление
- */
-router.delete("/api//categories/:id", categoryController.deleteCategory);
+router.delete(
+    "/categories/:id",
+    /* #swagger.tags = ['Categories']
+     #swagger.description = 'Удалить категорию'
+     #swagger.parameters['id'] = {
+         in: 'path',
+         required: true,
+         type: 'integer'
+     }
+     #swagger.responses[204] = {
+         description: 'Успешное удаление'
+     }
+  */
+    categoryController.deleteCategory
+);
 
 module.exports = router;
